metadata/20180627-225654-retrievePKG/src/objects/ChangeSet__c.object
<CustomObject>
    <description>Fake Salesforce change set used for screen mockups</description>
    <fields>
        <fullName>APIName__c</fullName>
        <label>API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LastModifiedByAlias__c</fullName>
        <label>Last Modified By Alias</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bill</fullName>
                </value>
                <value>
                    <fullName>Bob</fullName>
                </value>
                <value>
                    <fullName>Jack</fullName>
                </value>
                <value>
                    <fullName>Emily</fullName>
                </value>
                <value>
                    <fullName>Lucy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TargetOrg__c</fullName>
        <label>Target Org</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sandbox Test</fullName>
                </value>
                <value>
                    <fullName>Sandbox UAT</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Change Set</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>APIName__c</columns>
        <columns>CreatedDate__c</columns>
        <columns>LastModifiedDate__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Change Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>